# health-crm-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-audit.sql  init-db.sql  pyproject.toml
.github/workflows/: ci.yml
.qwen/: settings.json
demos/: demo_full_workflow.py  demo_intake.py  demo_scheduling.py
healthcare_agent/: __init__.py  cli.py  config.py  database.py
healthcare_agent/agents/: _base.py  communications.py  insurance.py  intake.py  scheduling.py
healthcare_agent/api/: app.py
healthcare_agent/api/routes/: __init__.py
healthcare_agent/compliance/: audit.py  baa_registry.py  breach_detection.py  deidentification.py  encryption.py  minimum_necessary.py  phi_classifier.py  retention.py
healthcare_agent/graph/: hitl.py  phi_scope.py  router.py  state.py  supervisor.py
healthcare_agent/integrations/clearinghouses/: __init__.py  change_healthcare.py
healthcare_agent/integrations/fhir/: client.py
healthcare_agent/integrations/messaging/: paubox.py  twilio.py
healthcare_agent/models/: __init__.py  audit.py  database.py  domain.py
healthcare_agent/safety/: clinical_boundary.py  content_classifier.py  disclaimers.py  red_flag_rules.py
tests/: test_end_to_end.py
tests/agents/: __init__.py  test_scheduling.py
tests/compliance/: __init__.py  test_audit_immutability.py  test_baa_endpoint_only.py  test_clinical_boundary_blocking.py  test_phi_scope_enforcement.py  test_red_flag_escalation.py
